--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:build": "tsc -w",
-    "dev:start": "nodemon ./build/index.js",
-    "start": "tsc && concurrently npm:dev:*"
+    "dev:start": "nodemon node ./build/index.js",
+    "dev": "tsc && concurrently npm:dev:*"
   },
   "nodemonConfig": {
     "ignore": [
@@ -18,11 +18,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/cheerio": "^0.22.18",
+    "@types/cookie-session": "^2.0.40",
     "@types/express": "^4.17.6",
     "@types/superagent": "^4.1.7",
+    "body-parse": "^0.1.0",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.2.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
     "superagent": "^5.2.2",
     "typescript": "^3.9.5"
   },
